# love-py

./: .gitignore  API_IMPLEMENTATION_PLAN.md  ARCHITECTURE.md  CMakeLists.txt  PROJECT_STATUS.md  README.md  WORKING.md  demo.py  mac_build.sh  pyproject.toml  run_game.py  setup.py  test_game.py
.github/workflows/: windows-build.yml
examples/: basic_game.py  gui_demo.py  image_test.py  import_helper.py  simple_game.py  test_default_font.py  test_filesystem.py  test_font.py  test_font_debug.py  test_font_simple.py  test_image_and_filesystem.py  test_imports.py  test_imports_package.py  test_input_callbacks.py  test_simple.py  test_ubuntu_font.py  visual_test.py
examples/lovepy_lisp/: main.py
examples/lovepy_lisp/libs/simplelisp/: .gitignore  README.md  TUTORIAL.md  env.py  eval.py  lexer.py  lisp_types.py  main.py  parser.py  primitives.py  spec.md  startup.scm
examples/lovepy_lisp/libs/simplelisp/testcase/: run_tests.py
examples/pkg_demo/: __init__.py
examples/tetris/: main.py
examples/tetris/tetris/: __init__.py  board.py  game.py  pieces.py
love/: __init__.py  audio.py  callbacks.py  event.py  filesystem.py  graphics.py  keyboard.py  love  love_py.py  mouse.py  timer.py  window.py
python_builtin/love_gui/: README.md  __init__.py  nineslice.py  theme.py  types.py  ui.py  widgets.py
references/love_api_py/: .gitignore  AGENTS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_CHECKLIST.py  README.md  convert_lua.py  setup.py
references/love_api_py/examples/: basic_usage.py
references/love_api_py/love_api_py/: __init__.py  api_data.py  models.py
references/love_api_py/tests/: __init__.py  test_api.py
resources/: no_game.py
src/: audio_module.cpp  callback_manager.cpp  event_module.cpp  filesystem_module.cpp  graphics_module.cpp  image_module.cpp  keyboard_module.cpp  love.cpp  love2d_bindings.cpp  love2d_common.h  mouse_module.cpp  timer_module.cpp  window_module.cpp
tests/: TEST_RESULTS.md  conftest.py  test_core.py  test_graphics.py  test_window.py
