[build-system]
requires = [
    "pybind11>=2.10.0",
    "setuptools>=45",
    "wheel",
    "cmake>=3.15"
]
build-backend = "setuptools.build_meta"

[project]
name = "love2d-py"
version = "11.5.0"
description = "Python bindings for the LÖVE 2D game framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "LOVE2D Python Community"}
]
keywords = ["love2d", "game", "graphics", "gamedev", "sdl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/love2d-community/love2d-py"
Documentation = "https://love2d-py.readthedocs.io"
Repository = "https://github.com/love2d-community/love2d-py"

[tool.setuptools]
packages = ["love"]
package-dir = {"love" = "love"}

[tool.setuptools.package-data]
love = ["*.so", "*.pyd", "*.dll", "*.dylib"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "visual: marks tests as visual tests that require manual verification",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
